# app-folder-structure-with-dev-container

./: .dockerignore  .env  .gitignore  Dockerfile  myapp.code-workspace  pyproject.toml
.devcontainer/: .env  Dockerfile  compose.yaml  devcontainer.json  docker-compose.yaml  entrypoint.sh
docker/: Dockerfile.dev
frontend/: package-lock.json
frontend/src/: App.vue
src/: database.py  main.py  models.py  schemas.py
