[project]
name = "learn-litestar"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.116.1",
    "python-multipart>=0.0.20",
    "sqlalchemy>=2.0.41",
    "uvicorn>=0.35.0",
]

[dependency-groups]
dev = [
    "ipython>=9.4.0",
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.6.15",
    "mypy>=1.16.1",
    "pre-commit>=4.2.0",
    "pytest-asyncio>=1.0.0",
    "ruff>=0.12.2",
]

[tool.ruff]
indent-width = 4
line-length = 120
include = ["src/**/*.py"]
exclude = ["src/tests/**", "src/migrations/**"]
cache-dir = ".ruff_cache"


[tool.ruff.lint]
select = ["E", "F", "W"]
ignore = ["E501", "F821"]
fixable = ["E", "F", "W"]

